scripts/nullaway/original/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8.txt
../original/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/ll/LL.java:152: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return collection.get(notEndChar).get(endChar);
		^
    (see http://t.uber.com/nullaway )
../original/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/ll/LL.java:152: error: [NullAway] dereferenced expression collection.get(notEndChar) is @Nullable
		return collection.get(notEndChar).get(endChar);
		                                 ^
    (see http://t.uber.com/nullaway )
../original/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/NFAToDNA/ToDFA.java:41: error: [NullAway] initializer method does not guarantee @NonNull field startNewNode (line 36) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public ToDFA(Hashtable<Integer,Node> nodeList,TreeSet<String> input){
	       ^
    (see http://t.uber.com/nullaway )
../original/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/NFAToDNA/ToDFA.java:59: error: [NullAway] dereferenced expression nodeList.get(1) is @Nullable
		nodes.add(nodeList.get(1).getValue());
		                         ^
    (see http://t.uber.com/nullaway )
../original/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/NFAToDNA/ToDFA.java:110: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/NFAToDNA/ToDFA.java:136: error: [NullAway] enhanced-for expression dtrans.get(key) is @Nullable
			for(Dtran d:dtrans.get(key)){
			                      ^
    (see http://t.uber.com/nullaway )
../original/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/NFAToDNA/ToDFA.java:180: error: [NullAway] enhanced-for expression dtrans.get(v) is @Nullable
			for(Dtran d:dtrans.get(v)){
			                      ^
    (see http://t.uber.com/nullaway )
../original/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/NFAToDNA/ToDFA.java:200: error: [NullAway] enhanced-for expression dtrans.get(v) is @Nullable
			for(Dtran d:dtrans.get(v)){
			                      ^
    (see http://t.uber.com/nullaway )
../original/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/NFAToDNA/ToDFA.java:223: error: [NullAway] dereferenced expression nodeList.get(i) is @Nullable
			TreeSet<Integer> n_1=nodeList.get(i).getNodeMove("");
			                                    ^
    (see http://t.uber.com/nullaway )
../original/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/NFAToDNA/ToDFA.java:243: error: [NullAway] dereferenced expression nodeList.get(n) is @Nullable
			node.addAll(nodeList.get(n).getNodeMove(tran));
			                           ^
    (see http://t.uber.com/nullaway )
../original/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/NFAToDNA/ToDFA.java:264: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/regexpToNFA/Node.java:52: error: [NullAway] enhanced-for expression enableReachValues.get(i) is @Nullable
			for(String str:enableReachValues.get(i)){
			                                    ^
    (see http://t.uber.com/nullaway )
../original/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/test/ReadFile.java:23: error: [NullAway] dereferenced expression dr is @Nullable
			while((str_=dr.readLine())!=null){
			              ^
    (see http://t.uber.com/nullaway )
../original/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/test/ReadFile.java:41: error: [NullAway] dereferenced expression dr is @Nullable
				dr.close();
				  ^
    (see http://t.uber.com/nullaway )
../original/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/test/ReadFile.java:61: error: [NullAway] dereferenced expression dr is @Nullable
			while((str_=dr.readLine())!=null){
			              ^
    (see http://t.uber.com/nullaway )
../original/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/test/ReadFile.java:69: error: [NullAway] dereferenced expression dr is @Nullable
				dr.close();
				  ^
    (see http://t.uber.com/nullaway )
../original/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/test/Word.java:4: error: [NullAway] @NonNull field name not initialized
	private String name;
	               ^
    (see http://t.uber.com/nullaway )
../original/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/test/Word.java:5: error: [NullAway] @NonNull field mark not initialized
	private String mark;//0-sure or 1-notsure 
	               ^
    (see http://t.uber.com/nullaway )
../original/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/test/Word.java:6: error: [NullAway] @NonNull field words not initialized
	private String words[];
	               ^
    (see http://t.uber.com/nullaway )
../original/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/test/SignAnalysis.java:44: error: [NullAway] @NonNull field str not initialized
	String str;
	       ^
    (see http://t.uber.com/nullaway )
../original/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/matcher/Match.java:26: error: [NullAway] initializer method does not guarantee @NonNull fields lastNode (line 18), content (line 21), chList (line 22), tran (line 24) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Match(String str){
	       ^
    (see http://t.uber.com/nullaway )
../original/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/matcher/Match.java:142: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return ds;
		^
    (see http://t.uber.com/nullaway )
../original/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/matcher/MatchGroups.java:13: error: [NullAway] initializer method does not guarantee @NonNull field matchString (line 12) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public MatchGroups(LinkedList<K> en){
	       ^
    (see http://t.uber.com/nullaway )
../original/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/matcher/MatchGroups.java:58: error: [NullAway] dereferenced expression group.get(i) is @Nullable
		return group.get(i).getString(matchString);
		                   ^
    (see http://t.uber.com/nullaway )
../original/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/matcher/MatchGroups.java:113: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/regexpToNFA/K.java:72: error: [NullAway] dereferenced expression nodeList.get(v) is @Nullable
			Enumeration<Integer> keys = nodeList.get(v).getEnableReachValues().keys();
			                                           ^
    (see http://t.uber.com/nullaway )
../original/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/regexpToNFA/Unit.java:21: error: [NullAway] initializer method does not guarantee @NonNull field nextUnit (line 16) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Unit(int s,int e,Unit unit){
	       ^
    (see http://t.uber.com/nullaway )
../original/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/regexpToNFA/MainClass.java:24: error: [NullAway] initializer method does not guarantee @NonNull field firstUnit (line 18) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public MainClass(String re){
	       ^
    (see http://t.uber.com/nullaway )
../original/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/regexpToNFA/MainClass.java:84: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
		handle(null,null,0,0);
		       ^
    (see http://t.uber.com/nullaway )
../original/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/regexpToNFA/MainClass.java:84: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
		handle(null,null,0,0);
		            ^
    (see http://t.uber.com/nullaway )
../original/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/regexpToNFA/MainClass.java:128: error: [NullAway] passing @Nullable parameter 'unit_now' where @NonNull is required
				Unit unit_1=handle(unit,unit_now,markNotNextUnit,markAddInnerFistUnitInit);
				                        ^
    (see http://t.uber.com/nullaway )
../original/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/regexpToNFA/MainClass.java:213: error: [NullAway] dereferenced expression nodeList.get(a) is @Nullable
		nodeList.get(a).addEnableReachValue(b, ch);
		               ^
    (see http://t.uber.com/nullaway )
../original/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/regexpToNFA/MainClass.java:250: error: [NullAway] enhanced-for expression td.getDtrans().get(v) is @Nullable
			for(Dtran d:td.getDtrans().get(v)){
			                              ^
    (see http://t.uber.com/nullaway )
33 errors
